--- a/arch/arm/configs/gbx2000v1_defconfig
+++ b/arch/arm/configs/gbx2000v1_defconfig
@@ -1377,6 +1377,7 @@ CONFIG_MTK_SYNC=y
 CONFIG_MTK_VIDEOCODEC_DRIVER=y
 CONFIG_MTK_FB=y
 CONFIG_MTK_VIDEOX=y
+CONFIG_MTK_VIDEOX_LIVEDISPLAY=y
 CONFIG_MTK_LCM_PHYSICAL_ROTATION="0"
 CONFIG_LCM_HEIGHT="800"
 CONFIG_LCM_WIDTH="640"
