pocket1: Retroid Pocket 1 support

--- a/arch/arm/configs/pocket1_defconfig
+++ b/arch/arm/configs/pocket1_defconfig
@@ -472,9 +472,9 @@ CONFIG_USE_OF=y
 CONFIG_ATAGS=y
 # CONFIG_DEPRECATED_PARAM_STRUCT is not set
 CONFIG_BUILD_ARM_APPENDED_DTB_IMAGE=y
-CONFIG_BUILD_ARM_APPENDED_DTB_IMAGE_NAMES="mt6580"
+CONFIG_BUILD_ARM_APPENDED_DTB_IMAGE_NAMES="pocket1"
 CONFIG_BUILD_ARM_DTB_OVERLAY_IMAGE=y
-CONFIG_BUILD_ARM_DTB_OVERLAY_IMAGE_NAMES="gbx2000v1"
+CONFIG_BUILD_ARM_DTB_OVERLAY_IMAGE_NAMES="gbx2000v0"
 CONFIG_ZBOOT_ROM_TEXT=0
 CONFIG_ZBOOT_ROM_BSS=0
 # CONFIG_ARM_APPENDED_DTB is not set
@@ -1247,7 +1247,7 @@ CONFIG_UID_SYS_STATS=y
 # CONFIG_CXL_BASE is not set
 CONFIG_MEDIATEK_SOLUTION=y
 CONFIG_MTK_PLATFORM="mt6580"
-CONFIG_ARCH_MTK_PROJECT="gbx2000v1"
+CONFIG_ARCH_MTK_PROJECT="gbx2000v0"
 # CONFIG_MTK_LEGACY is not set
 # CONFIG_FPGA_EARLY_PORTING is not set
 # CONFIG_MTK_LM_MODE is not set
@@ -3962,5 +3962,5 @@ CONFIG_FONT_8x16=y
 CONFIG_FONT_AUTOSELECT=y
 CONFIG_ARCH_HAS_SG_CHAIN=y
 # CONFIG_VIRTUALIZATION is not set
-# Pocket2 FPGA
-CONFIG_RETROARCH_PLATFORM=y
+# Pocket1 FPGA
+CONFIG_RETROARCH_PLATFORM_POCKET1=y
