--- a/drivers/misc/retroarch/Makefile
+++ b/drivers/misc/retroarch/Makefile
@@ -1,2 +1,4 @@
-obj-y	 += fpga/
-obj-y	 += hdmi/
+obj-$(CONFIG_RETROARCH_PLATFORM)	 += fpga/
+obj-$(CONFIG_RETROARCH_PLATFORM)	 += hdmi/
+obj-$(CONFIG_RETROARCH_PLATFORM_POCKET1)	 += fpga_pocket1/
+obj-$(CONFIG_RETROARCH_PLATFORM_POCKET1)	 += hdmi/
