--- a/drivers/misc/Kconfig
+++ b/drivers/misc/Kconfig
@@ -553,4 +553,5 @@ source "drivers/misc/genwqe/Kconfig"
 source "drivers/misc/echo/Kconfig"
 source "drivers/misc/cxl/Kconfig"
 source "drivers/misc/mediatek/Kconfig"
+source "drivers/misc/retroarch/Kconfig"
 endmenu
