pocket1: LineageOS booted on pocket1 * This commit does the following: - creates separate pocket1 versions of accdet, fpga, and hdmi drivers (since these differ from pocket2) - modifies the lcm to use pocket1 or pocket2 config accordingly (pocket1 lcm driver is slightly different) - adds new defconfig options that will have differentiate between pocket1 and pocket2 - pulls a small defconfig change from rp1 defconfig

--- a/arch/arm/configs/pocket1_defconfig
+++ b/arch/arm/configs/pocket1_defconfig
@@ -1536,7 +1536,7 @@ CONFIG_CUSTOM_KERNEL_SSW=""
 #
 # Other Peripherals
 #
-CONFIG_MTK_ACCDET=y
+CONFIG_MTK_ACCDET_POCKET1=y
 CONFIG_ACCDET_EINT=y
 # CONFIG_ACCDET_EINT_IRQ is not set
 # CONFIG_ACCDET_SUPPORT_EINT0 is not set
@@ -1653,9 +1653,9 @@ CONFIG_MTK_CACHE_DUMP=y
 # CONFIG_MTK_SM100 is not set
 # CONFIG_MTK_MT6750TT is not set
 # CONFIG_MTK_AB_OTA_UPDATER is not set
-CONFIG_MTK_AEE_FEATURE=y
-CONFIG_MTK_AEE_AED=y
-CONFIG_MTK_AEE_IPANIC=y
+# CONFIG_MTK_AEE_FEATURE is not set
+# CONFIG_MTK_AEE_AED is not set
+# CONFIG_MTK_AEE_IPANIC is not set
 # CONFIG_MTK_AEE_POWERKEY_HANG_DETECT is not set
 # CONFIG_MTK_AEE_MRDUMP is not set
 CONFIG_MTK_BOOT=y
