--- a/drivers/misc/mediatek/accdet/Makefile
+++ b/drivers/misc/mediatek/accdet/Makefile
@@ -3,4 +3,6 @@ subdir-ccflags-y += -Werror -I$(srctree)/drivers/misc/mediatek/include/mt-plat/
 
 obj-$(CONFIG_MTK_ACCDET) := accdet_drv.o
 obj-$(CONFIG_MTK_ACCDET) += $(subst ",,$(CONFIG_MTK_PLATFORM))/
+obj-$(CONFIG_MTK_ACCDET_POCKET1) := accdet_drv.o
+obj-$(CONFIG_MTK_ACCDET_POCKET1) += $(subst ",,$(CONFIG_MTK_PLATFORM))/
 
